<resources>
    <string name="app_name">Liberty Baptist Church App</string>
    <string name="menu_home">Home</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_media">Media</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bible">Bible</string>
    <string name="sub_menu_other">Other</string>
    <string name="username">UserName</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book">Book</string>
    <string name="chapter">Chapter</string>
    <string name="verse">Verse</string>
    <string name="nextMonth"><![CDATA[->]]></string>
    <string name="prevMonth"><![CDATA[<-]]></string>
    <string name="events">Events</string>
    <string name="title_activity_test">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>


</resources>