<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BibleFragment">


   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/btnBook"
       android:text="@string/book"
       android:layout_marginTop="40dp"
       android:layout_toLeftOf="@+id/btnChapter"
       android:layout_marginRight="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChapter"
        android:text="@string/chapter"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnVerse"
        android:text="@string/verse"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/btnChapter"
        android:layout_marginLeft="20dp"/>
</RelativeLayout>